[gd_scene load_steps=10 format=3 uid="uid://bdgegw7cy4d1r"]

[ext_resource type="Script" path="res://scenes/ui/loginpanel/LoginPanel.gd" id="1_uhohb"]
[ext_resource type="Theme" uid="uid://dreboohjjcn2f" path="res://assets/themes/LoginPanelTheme.tres" id="2_d6ypk"]
[ext_resource type="PackedScene" uid="uid://retyeadedkag" path="res://scenes/ui/buttons/mute_unmute_all_button.tscn" id="3_lpu63"]
[ext_resource type="AudioStream" uid="uid://b3kstyb5opkj1" path="res://assets/audio/ui/login_panel/ui_click/ui_click.mp3" id="3_pgl4f"]
[ext_resource type="AudioStream" uid="uid://xvulnt1qjsua" path="res://assets/audio/ui/login_panel/village_consort/village_ consort.mp3" id="4_c7ug3"]

[sub_resource type="Animation" id="Animation_hddh3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/LoginContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/CreateAccountContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_myp56"]
resource_name = "goto_createaccount"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPanel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/LoginContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/CreateAccountContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_sg56s"]
resource_name = "goto_login"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPanel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/LoginContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/CreateAccountContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3bwtf"]
_data = {
"RESET": SubResource("Animation_hddh3"),
"goto_createaccount": SubResource("Animation_myp56"),
"goto_login": SubResource("Animation_sg56s")
}

[node name="LoginPanel" type="Control"]
custom_minimum_size = Vector2(800, 800)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_d6ypk")
script = ExtResource("1_uhohb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoginContainer" type="VBoxContainer" parent="Panel"]
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -138.0
offset_right = 263.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/LoginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/LoginContainer/MarginContainer"]
layout_mode = 2

[node name="LoginLabel" type="Label" parent="Panel/LoginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Login"
horizontal_alignment = 1

[node name="LoginText" type="LineEdit" parent="Panel/LoginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
placeholder_text = "Enter Your Login"
alignment = 1
caret_blink = true
caret_blink_interval = 0.45

[node name="MarginContainer2" type="MarginContainer" parent="Panel/LoginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/LoginContainer/MarginContainer2"]
layout_mode = 2

[node name="PasswordLabel" type="Label" parent="Panel/LoginContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Password"
horizontal_alignment = 1

[node name="LoginPasswordText" type="LineEdit" parent="Panel/LoginContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
placeholder_text = "Enter Your Password"
alignment = 1
secret = true
caret_blink = true
caret_blink_interval = 0.45

[node name="MarginContainer3" type="MarginContainer" parent="Panel/LoginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/LoginContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LoginButton" type="Button" parent="Panel/LoginContainer/MarginContainer3/VBoxContainer" groups=["ui_button"]]
layout_mode = 2
size_flags_vertical = 4
text = "Connect"

[node name="GoToCreateAccountButton" type="Button" parent="Panel/LoginContainer/MarginContainer3/VBoxContainer" groups=["ui_button"]]
layout_mode = 2
size_flags_vertical = 4
text = "Create Account"

[node name="CreateAccountContainer" type="VBoxContainer" parent="Panel"]
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -138.0
offset_right = 263.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/CreateAccountContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CreateAccountContainer/MarginContainer"]
layout_mode = 2

[node name="LoginLabel" type="Label" parent="Panel/CreateAccountContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Login Name"
horizontal_alignment = 1

[node name="LoginText" type="LineEdit" parent="Panel/CreateAccountContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
focus_mode = 1
placeholder_text = "Enter Your Desired Login"
alignment = 1
caret_blink = true
caret_blink_interval = 0.45

[node name="MarginContainer2" type="MarginContainer" parent="Panel/CreateAccountContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CreateAccountContainer/MarginContainer2"]
layout_mode = 2

[node name="PasswordLabel" type="Label" parent="Panel/CreateAccountContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Password"
horizontal_alignment = 1

[node name="PasswordText" type="LineEdit" parent="Panel/CreateAccountContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
placeholder_text = "Enter Your Password"
alignment = 1
secret = true
caret_blink = true
caret_blink_interval = 0.45

[node name="PasswordConfirmText" type="LineEdit" parent="Panel/CreateAccountContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
placeholder_text = "Re-Enter Your Password"
alignment = 1
secret = true
caret_blink = true
caret_blink_interval = 0.45

[node name="MarginContainer3" type="MarginContainer" parent="Panel/CreateAccountContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CreateAccountContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CreateAccountButton" type="Button" parent="Panel/CreateAccountContainer/MarginContainer3/VBoxContainer" groups=["ui_button"]]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Create Account"

[node name="BackToLoginButton" type="Button" parent="Panel/CreateAccountContainer/MarginContainer3/VBoxContainer" groups=["ui_button"]]
layout_mode = 2
size_flags_vertical = 4
text = "Back"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -78.0
offset_right = 86.0
grow_vertical = 0

[node name="MuteUnmuteAllButton" parent="Panel/AspectRatioContainer" instance=ExtResource("3_lpu63")]
layout_mode = 2

[node name="TransitionPanel" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3bwtf")
}

[node name="BackgroundAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_c7ug3")
volume_db = -10.0

[node name="ClickAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pgl4f")
volume_db = 10.0
